# QExpressionSpinBox

./: CMakeLists.txt  LICENSE  QXSpinBoxConfig.cmake.in  README.md
include/QXSpinBox/: QExpressionDoubleSpinBox  QExpressionSpinBox  qexpressiondoublespinbox.h  qexpressionspinbox.h  qxspinboxglobal.h
src/: qexpressiondoublespinbox.cpp  qexpressionspinbox.cpp  tinyexpr.c
tests/: CMakeLists.txt
tests/QXSpinBox/: CMakeLists.txt  main.cpp
